--- a/SponUI/MainPage.xaml
+++ b/SponUI/MainPage.xaml
@@ -3,40 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SponUI.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+    <Grid RowDefinitions="50, Auto, *"
+          ColumnDefinitions=".125*, .125*, .50*, .25*"
+          Padding="20"
+          ColumnSpacing="20"
+          RowSpacing="20">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+        <Image Grid.Column="0" Source="menu_icon.png"></Image>
+        <Image Grid.Column="1" Source="event_icon.png"></Image>
+        <Image Grid.Column="2" Source="logo_fullcolor.png"></Image>
+        <Image Grid.Column="3" Source="message_icon.png"></Image>
 
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
-
-        </VerticalStackLayout>
-    </ScrollView>
+        <CollectionView Grid.Row="2" Grid.RowSpan="3" Grid.ColumnSpan="4">
+            <CollectionView.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>Event 1</x:String>
+                    <x:String>Event 2</x:String>
+                    <x:String>Event 3</x:String>
+                </x:Array>
+            </CollectionView.ItemsSource>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="0,5">
+                        <Frame>
+                            <Label Text="{Binding .}"
+                                   FontSize="24">
+                            </Label>
+                        </Frame>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
+    
+    
 
 </ContentPage>
 
