--- a/SponUI/MainPage.xaml
+++ b/SponUI/MainPage.xaml
@@ -11,10 +11,10 @@
 
         <Image Grid.Column="0" Source="menu_icon.png" Aspect="AspectFill"></Image>
         <Image Grid.Column="1" Source="event_icon.png" Aspect="AspectFit"></Image>
-        <Image Grid.Column="2" Source="logo_fullcolor.png"></Image>
-        <Image Grid.Column="3" Source="message_icon.png"></Image>
+        <Image Grid.Column="2" Source="logo_fullcolor.png" Aspect="AspectFit"></Image>
+        <Image Grid.Column="3" Source="message_icon.png" Aspect="AspectFit"></Image>
 
-        <CollectionView Grid.Row="2" Grid.RowSpan="3" Grid.ColumnSpan="4" HorizontalOptions="CenterAndExpand">
+        <CollectionView Grid.Row="2" Grid.RowSpan="3" Grid.ColumnSpan="4">
             <CollectionView.ItemsSource>
                 <x:Array Type="{x:Type x:String}">
                     <x:String>Event 1</x:String>
