--- a/SponUI/MainPage.xaml
+++ b/SponUI/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SponUI.MainPage">
+             x:Class="SponUI.MainPage"
+             xmlns:viewmodel="clr-namespace:SponUI.ViewModel" xmlns:model="clr-namespace:SponUI.Models" x:DataType="viewmodel:MainViewModel">
 
     <Grid RowDefinitions="50, Auto, *"
           ColumnDefinitions=".125*, .125*, .50*, .25*"
@@ -14,29 +15,19 @@
         <Image Grid.Column="2" Source="logo_fullcolor.png" Aspect="AspectFit"></Image>
         <Image Grid.Column="3" Source="message_icon.png" Aspect="AspectFit"></Image>
 
-        <CollectionView Grid.Row="2" Grid.RowSpan="3" Grid.ColumnSpan="4">
-            <CollectionView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>Event 1</x:String>
-                    <x:String>Event 2</x:String>
-                    <x:String>Event 3</x:String>
-                </x:Array>
-            </CollectionView.ItemsSource>
+        <CollectionView Grid.Row="2" Grid.RowSpan="3" Grid.ColumnSpan="4" ItemsSource="{Binding Events}">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="model:Event">
                     <Grid Padding="0,5">
                         <Frame>
-                            <Label Text="{Binding .}"
-                                   FontSize="24">
-                            </Label>
+                            <Image Source="{Binding Photo}"></Image>
                         </Frame>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
     </Grid>
-    
-    
+
 
 </ContentPage>
 
