--- a/SponUI/MainPage.xaml
+++ b/SponUI/MainPage.xaml
@@ -9,25 +9,28 @@
           ColumnDefinitions=".125*, .125*, .50*, .25*"
           Padding="20"
           ColumnSpacing="20"
-          RowSpacing="20">
+          RowSpacing="20"
+          HorizontalOptions="FillAndExpand"
+          VerticalOptions="FillAndExpand">
 
         <Image Grid.Column="0" Source="menu_icon.png" Aspect="AspectFill"></Image>
         <Image Grid.Column="1" Source="create_event_icon.png" Aspect="AspectFit" HeightRequest="35" WidthRequest="35" TranslationX="-15"></Image>
         <Image Grid.Column="2" Source="logo_fullcolor.png" Aspect="AspectFit" HeightRequest="75" WidthRequest="75" TranslationX="-10"></Image>
         <Image Grid.Column="3" Source="message_icon.png" Aspect="AspectFit" TranslationX="10" TranslationY="5"></Image>
 
-        <CollectionView Grid.Row="2" Grid.RowSpan="3" Grid.ColumnSpan="4" ItemsSource="{Binding Events}">
+        <CollectionView Grid.Row="2" Grid.RowSpan="3" Grid.ColumnSpan="4" ItemsSource="{Binding Events}" HorizontalOptions="Fill" Margin="-20,0">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="{x:Type model:Event}">
-                    <Grid Padding="0,5">
-                        <Border WidthRequest="75"
-                                HeightRequest="25"
+                    <Grid Padding="0,12">
+                        <Border 
                                 StrokeThickness="1"
                                 Stroke="#FFAA2C"
                                 StrokeShape="RoundRectangle 20"
                                 BackgroundColor="#FFAA2C"
                                 VerticalOptions="Start"
                                 HorizontalOptions="Start"
+                                WidthRequest="75"
+                                HeightRequest="25"
                                 ZIndex="1"
                                 TranslationX="30"
                                 TranslationY="10">
@@ -74,17 +77,17 @@
                                 </Shadow>
                             </Border.Shadow>
                         </Border>
-                        <Border WidthRequest="350"
+                        <Border WidthRequest="400"
                                 HeightRequest="200"
                                 Stroke="Gray"
                                 StrokeThickness="1"
-                                StrokeShape="RoundRectangle 20"
+                                StrokeShape="RoundRectangle 10"
                                 BackgroundColor="White">
 
                             <Image Source="{Binding Photo.Source}"
                                    Aspect="AspectFill"
                                    HeightRequest="198"
-                                   WidthRequest="348">
+                                   WidthRequest="398">
                             </Image>
                             <Border.Shadow>
                                 <Shadow Brush="Black"
@@ -110,10 +113,10 @@
                                                         StrokeThickness="0"
                                                         VerticalOptions="End"
                                                         HorizontalOptions="Center">
-                                                    <Image Source="{Binding Photo.Source}"
-                                                       Aspect="AspectFill"
-                                                       WidthRequest="20"
-                                                       HeightRequest="20">
+                                                    <Image  Source="{Binding Photo.Source}"
+                                                            Aspect="AspectFill"
+                                                            HeightRequest="20"
+                                                            WidthRequest="20">
                                                     </Image>
                                                 </Border>
                                             </Grid>
@@ -122,7 +125,55 @@
                                 </CollectionView>
                         </FlexLayout>
 
-                        <Border WidthRequest="350"
+                        <Border WidthRequest="75"
+                                HeightRequest="50"
+                                Stroke="Gray"
+                                StrokeThickness="2"
+                                StrokeShape="RoundRectangle 10"
+                                BackgroundColor="White"
+                                Grid.Row="5"
+                                VerticalOptions="End"
+                                ZIndex="1"
+                                TranslationX="150"
+                                TranslationY="-50">
+                            <Label Text="Starting in"
+                                   TextColor="Black"
+                                   FontFamily="KanitRegular"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Start"
+                                   HeightRequest="89"
+                                   FontSize="12"
+                                   Padding="10,0">
+                            </Label>
+                            <Border.Shadow>
+                                <Shadow Brush="Black"
+                                        Offset="0,5"
+                                        Radius="5"
+                                        Opacity="0.4">
+                                </Shadow>
+                            </Border.Shadow>
+                        </Border>
+                        <Border WidthRequest="90"
+                                HeightRequest="50"
+                                Stroke="Gray"
+                                StrokeThickness="0"
+                                StrokeShape="RoundRectangle 20"
+                                Grid.Row="5"
+                                VerticalOptions="End"
+                                ZIndex="1"
+                                TranslationX="151"
+                                TranslationY="-35">
+                            <Label Text="0:15"
+                                   TextColor="Red"
+                                   FontFamily="KanitRegular"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Start"
+                                   HeightRequest="89"
+                                   FontSize="20"
+                                   Padding="10,0">
+                            </Label>
+                        </Border>
+                        <Border WidthRequest="400"
                                 HeightRequest="75"
                                 Stroke="Gray"
                                 StrokeThickness="2"
@@ -131,7 +182,7 @@
                                 Grid.Row="5"
                                 VerticalOptions="End">
                             
-                            <Grid Padding="5">
+                            <Grid Padding="0,5">
                                 <Border WidthRequest="75"
                                         HeightRequest="25"
                                         Stroke="Black"
@@ -141,7 +192,7 @@
                                         VerticalOptions="Start"
                                         HorizontalOptions="Start"
                                         TranslationY="10"
-                                        TranslationX="3">
+                                        TranslationX="8">
 
                                     <Label Text="{Binding AttendentCount, StringFormat='{0:F0}/10 Going'}"
                                            FontFamily="Kanit-Regular"
@@ -149,7 +200,8 @@
                                            TextColor="White"
                                            HorizontalOptions="Center"
                                            VerticalOptions="Center"
-                                           HeightRequest="20">
+                                           HeightRequest="20"
+                                           Padding="10,0">
                                     </Label>
                                     <Border.Shadow>
                                         <Shadow Brush="Black"
@@ -167,7 +219,8 @@
                                        TextColor="Black"
                                        VerticalOptions="End"
                                        HorizontalOptions="Start"
-                                       HeightRequest="25">
+                                       HeightRequest="25"
+                                       TranslationX="5">
                                 </Label>
 
                                 <Border WidthRequest="50"
@@ -177,16 +230,15 @@
                                         StrokeShape="RoundRectangle 20"
                                         BackgroundColor="Black"
                                         VerticalOptions="End"
-                                        HorizontalOptions="End">
+                                        HorizontalOptions="End"
+                                        TranslationX="-5">
 
                                     <Label Text="0.5 mi"
                                            FontFamily="Kanit-Regular"
                                            FontSize="12"
                                            TextColor="White"
                                            HorizontalOptions="Center"
-                                           VerticalOptions="Center"
-                                           HeightRequest="20"
-                                           WidthRequest="35">
+                                           VerticalOptions="Center">
                                     </Label>
                                     <Border.Shadow>
                                         <Shadow Brush="Black"
